--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "@babel/runtime": "^7.28.4",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
@@ -22,8 +23,10 @@
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-modern-drawer": "^1.4.0",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
+    "vaul": "^1.1.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
