--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "@babel/runtime": "^7.28.4",
+    "@prisma/client": "^6.17.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-three/drei": "^10.7.6",
@@ -21,9 +22,11 @@
     "maath": "^0.10.8",
     "motion": "^12.23.24",
     "next": "15.5.6",
+    "prisma": "^6.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-modern-drawer": "^1.4.0",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
     "vaul": "^1.1.2",
