--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "react-dom": "19.1.0",
     "react-modern-drawer": "^1.4.0",
     "sqlite3": "^5.1.7",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
     "vaul": "^1.1.2",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -42,5 +44,8 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
