style: 移除多余的空行和调试日志
清理代码中的多余空行和调试用的console.log语句

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start"
+  "start": "next start"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
