--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-  "start": "next start"
+    "start": "next start",
+    "seed:business": "node scripts/seed-business.ts"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
