refactor: 更新业务类型定义并调整模块导入方式
- 将typeList从enum改为const对象，提高类型安全性
- 更新脚本文件使用ES模块导入语法
- 在tsconfig中添加allowImportingTsExtensions支持
- 将package.json设置为ES模块并更新seed脚本

--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "jiufenglanting-business",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "seed:business": "node scripts/seed-business.ts"
+    "seed:business": "node --experimental-strip-types scripts/seed-business.ts"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
