--- a/package.json
+++ b/package.json
@@ -52,6 +52,11 @@
     "typescript": "^5"
   },
   "resolutions": {
-    "styled-components": "^5"
+    "styled-components": "^6.1.19"
+  },
+  "pnpm": {
+    "overrides": {
+      "styled-components": "^6.1.19"
+    }
   }
 }
