--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "seed:business": "node --experimental-strip-types scripts/seed-business.ts"
+    "seed:business": "node --experimental-strip-types scripts/seed-business.ts",
+    "postinstall": "prisma generate"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
