--- a/netlify.toml
+++ b/netlify.toml
@@ -3,4 +3,4 @@
   publish = ".next"
 
 [build.environment]
-  DATABASE_URL = "file:/tmp/dev.db"
+  DATABASE_URL = "file:dev?mode=memory&cache=shared"
