fix: 更新SQLite内存数据库连接字符串格式
将内存数据库连接字符串从"file:dev?mode=memory&cache=shared"更新为"file::memory:?cache=shared"以符合最新SQLite格式要求

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,4 +3,4 @@
   publish = ".next"
 
 [build.environment]
-  DATABASE_URL = "file:dev?mode=memory&cache=shared"
+  DATABASE_URL = "file::memory:?cache=shared"
